# FER

./: .gitignore  CMakeLists.txt  README.md  contempt.csv  create_csv.py  dirent_example  fear.csv  happy.csv  lbp  lbp.cpp  listdir  neutral.csv  processdata.py  sadness.csv
emotions/: anger.csv  contempt.csv  disgust.csv  emotion_file.csv  fear.csv  happy.csv  neutral.csv  sadness.csv  surprise.csv
include/: base64.hpp  fer.h  image.h  lbp.h
src/: Image.cpp  classification.cpp  commented_out.txt  create_csv.py  dirent_example.cpp  feature_extraction.cpp  fer.cpp  filestorage_example.cpp  github_cheatsheet.sh  lbp.cpp  lbp_main.cpp  listdir.cpp  predict.cpp  rescale.cpp  writejson.cpp  writejsontest.cpp  writeyaml.cpp
